2005-01-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DateDisplay.py: Make DateDisplayEn inherit from DateDisplay, make
	DateDisplay handle only ISO dates
	* src/DateHandler.py: use DateDisplayEn for English languages, use
	DateDisplay for CJK
	* src/GrampsCfg.py: Don't do initial redisplay of Person List when
	dialog comes up, update dates dynamically when date format changes
	
2005-01-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels.py: Add Date and Place columns to Media model;
	Zip to Place model.
	* src/MediaView.py: Support for Date and Place columns.
	* src/PlaceView.py: Support for Zil column.
	* src/GrampsDbBase.py (get_place_column_order,
	get_media_column_order): New column defaults.

2005-01-11 Eero Tamminen <eerot@sf>
	* src/plugins/StatisticsChart.py: remove localization from command
	  line options help and put it back to dialog additions. Have
	  options in code in same order as in the GUI. Alias
	  options_class.handler.options_dict for more readable code.
	  Fix sort and gender option parsing.

2005-01-11 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GrampsGconfKeys.py (get_event_id_prefix): Typo.
	* src/GrampsIniKeys.py (get_event_id_prefix): Typo.

	* src/Utils.py (for_each_ancestor): Switch from Person to handle.
	* src/GenericFilter.py (for_each_ancestor): Pass db instance.

	* src/plugins/GraphViz.py: Support for graphical report
	if dot was found on the system.

	* src/Report.py: Switch to using short format names. Fix templates.
	* src/Plugins.py: Switch to using short format names. 
	* src/PluginMgr.py: Switch to using short format names. 
	* src/ReportOptions.py: Switch to using short format names.

	* src/plugins/WebPage.py: Fix templates.

2005-01-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditPlace.py (EditPlace.display_references):
	Fix event and object references.
	* src/ImageSelect.py (GlobalMediaProperties.display_refs):
	Add references for personal and family events.
