@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000-2004  Donald N. Allingham
+# Copyright (C) 2000-2005  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -272,9 +272,9 @@ class CheckIntegrity:
             else:
                 fgender = father.get_gender()
                 mgender = mother.get_gender()
-                if type != RelLib.Family._CIVIL_UNION:
+                if type != RelLib.Family.CIVIL_UNION:
                     if fgender == mgender and fgender != RelLib.Person.unknown:
-                        family.set_relationship(RelLib.Family._CIVIL_UNION)
+                        family.set_relationship(RelLib.Family.CIVIL_UNION)
                         self.fam_rel.append(family_handle)
                         self.db.commit_family(family,self.trans)
                     elif fgender == RelLib.Person.female or mgender == RelLib.Person.male:
@@ -283,7 +283,7 @@ class CheckIntegrity:
                         self.fam_rel.append(family_handle)
                         self.db.commit_family(family,self.trans)
                 elif fgender != mgender:
-                    family.set_relationship(RelLib.Family._UNKNOWN)
+                    family.set_relationship(RelLib.Family.UNKNOWN)
                     self.fam_rel.append(family_handle)
                     if fgender == RelLib.Person.female or mgender == RelLib.Person.male:
                         family.set_father_handle(mother_handle)
